test/spec/i64.store64.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/i64.store64.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/i64.store64.fail.wast:1:51: unexpected token "i64.store64"
... 1) (func (param i32) (param i64) (i64.store64 (get_local 0) (get_local 1))))
                                      ^^^^^^^^^^^
out/third_party/testsuite/i64.store64.fail.wast:1:63: syntax error, unexpected (
... 1) (func (param i32) (param i64) (i64.store64 (get_local 0) (get_local 1))))
                                                  ^

;;; STDERR ;;)
